[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aem-modbus-cli"
version = "1.0.0"
description = "Modbus RTU/TCP diagnostic and field-test toolkit for industrial deployments — scan, baudrate detection, retry diagnostics, latency benchmarking."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "LRI Automação Industrial", email = "vendas@lri.com.br" }]
keywords = ["modbus", "modbus-rtu", "modbus-tcp", "scada", "plc", "industrial-automation", "diagnostic", "rs-485"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
dependencies = ["pymodbus>=3.0.0", "pyserial>=3.5"]

[project.urls]
Homepage = "https://aem.lri.com.br/en-us"
Documentation = "https://aem.lri.com.br/en-us/modbus"
Repository = "https://github.com/leaberg69/aem-modbus-cli"
Issues = "https://github.com/leaberg69/aem-modbus-cli/issues"
Companion = "https://github.com/leaberg69/aem-modbus-simulator"

[project.scripts]
aem-modbus-cli = "aem_modbus_cli:main"
